--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
+  "name": "Sample Heroku App for Commerce Responses",
+  "description": "Sample Heroku App for Commerce Responses",
+  "repository": "https://github.com/forcedotcom/commerce-heroku-sample-response",
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs"
