--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "version": "1.0.0",
+  "description": "Sample Heroku App for Commerce Responses",
   "engines": {
     "node": "10.x"
   },
@@ -20,12 +20,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/forcedotcom/commerce-heroku-sample-response"
   },
   "keywords": [
     "node",
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "BSD-3-Clause"
 }
